Update code to fix concat problem

--- a/pointfree-io.cabal
+++ b/pointfree-io.cabal
@@ -23,4 +23,5 @@ executable pointfree-io
                       , wai-middleware-static
                       , wai-extra
                       , heroku
+                      , time
   default-language:    Haskell2010
