--- a/pointfree-io.cabal
+++ b/pointfree-io.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 executable pointfree-io
   main-is:              Main.hs
   build-depends:        base >=4.7 && <4.8
+                      , process
                       , wai
                       , http-types
                       , text
@@ -23,5 +24,6 @@ executable pointfree-io
                       , wai-middleware-static
                       , wai-extra
                       , heroku
+                      , transformers
                       , time
   default-language:    Haskell2010
