Add pointfree binary

--- a/pointfree-io.cabal
+++ b/pointfree-io.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 executable pointfree-io
   main-is:              Main.hs
-  build-depends:        base >=4.7 && <4.8
+  build-depends:        base
                       , aeson
                       , process
                       , wai
