--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
     "css-loader": "^0.9.1",
+    "extract-text-webpack-plugin": "^0.5.0",
     "jquery": "^2.1.3",
     "node-sass": "^2.1.1",
     "sass-loader": "^0.6.0",
