Convert to pointfree library.
Changing to the pointfree library solves issues with lambdas when
calling the binary.  It's also just a cleaner way to handle everything

--- a/pointfree-io.cabal
+++ b/pointfree-io.cabal
@@ -29,5 +29,6 @@ executable pointfree-io
                       , transformers
                       , bytestring
                       , time
+                      , pointfree == 1.1
   default-language:    Haskell2010
 
